# Vitis-rnn-xception

./: .gitignore  README.md
Rnn/: code.cpp  hls.app  model_weights.h  testbench.cpp
Rnn/solution1/: script.tcl  solution1.aps  solution1.directive  solution1_data.json
Rnn/solution1/.autopilot/: .autopilot_exit
Rnn/solution1/.autopilot/db/: .message_syn.xml  a.g  a.g.1.bc  a.g.2.bc  a.g.2.prechk.bc  a.g.ld.0.bc  a.g.ld.0.bc.clang.reflow.diag.yml  a.g.ld.1.lower.bc  a.g.ld.3.fpc.bc  a.g.ld.4.m2.bc  a.g.ld.5.gdce.bc  a.o.1.tmp.bc  a.o.2.bc  a.o.3.bc  all.directive.json  apatb_rnn_forward.cpp  apatb_rnn_forward_ir.bc  apatb_rnn_forward_ir.ll  autopilot.rtl.models.tcl  autopilot.rtl.models.txt  cmplx.3.000.fe.link.json  cmplx.3.001.fe.unroll-raw.json  cmplx.3.002.fe.unroll-simplified.json  cmplx.3.003.fe.inline-raw.json  cmplx.3.004.fe.inline-simplified.json  cmplx.3.005.fe.array-partition-raw.json  code.g.bc  (+67 more)
Rnn/solution1/.autopilot/db/driver/src/: CMakeLists.txt  Makefile  xrnn_forward_hw.h  xrnn_forward_linux.c
Rnn/solution1/.debug/: rnn_forward.protoinst
Xception/: xception_weights.h
Xception/Scripts/: generate_squeezenet_input.py  generate_squeezenet_weights.py  generate_xception_input.py  generate_xception_weights.py  print_model.py
Xception/Test/: input_image_squeezenet.h  input_image_xception.h
Xception/squeezenet/include/: squeezenet.h  squeezenet_params.h
Xception/squeezenet/src/: squeezenet.cpp  squeezenet_tb.cpp
Xception/xception/include/: xception.h  xception_params.h  xception_weights.h
Xception/xception/src/: xception.cpp  xception_tb.cpp
(+72 files in other folders)
